[tool.poetry]
name = "hyper_param"
version = "0.1.0"
description = ""
authors = ["Kobe Coleman <colemank@allegheny.edu>"]

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
optuna = "^3.0.2"
torch = "^1.12.1"
numpy = "^1.23.3"
plotly = "^5.10.0"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.6.0"
black = "^22.3.0"
pydocstyle = "^5.1.1"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
