[tool.poetry]
name = "hyper_param"
version = "0.1.0"
description = ""
authors = ["Kobe Coleman <colemank@allegheny.edu>"]

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
optuna = "^3.0.2"
torch = "<1.13"
numpy = "^1.23.3"
plotly = "^5.10.0"
pandas = "^1.5.0"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
black = "^22.3.0"
pydocstyle = "^5.1.1"
flake8 = "^3.8.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
